including hybridization ref

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1178,3 +1178,94 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	pages = {306--309},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/9LDXVT9D/Higham et al. - 2014 - The timing and spatiotemporal patterning of Neande.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/283SY3S6/nature13621.html:text/html}
 }
+
+@article{Salazar_Hybrid_speciation_2010,
+    author = {Salazar, Camilo AND Baxter, Simon W. AND Pardo-Diaz, Carolina AND Wu, Grace AND Surridge, Alison AND Linares, Mauricio AND Bermingham, Eldredge AND Jiggins, Chris D.},
+    journal = {PLOS Genetics},
+    publisher = {Public Library of Science},
+    title = {Genetic Evidence for Hybrid Trait Speciation in Heliconius Butterflies},
+    year = {2010},
+    month = {04},
+    volume = {6},
+    url = {https://doi.org/10.1371/journal.pgen.1000930},
+    pages = {1-12},
+    abstract = {Author Summary Hybrid speciation challenges our view of biodiversity as a branching tree and is considered rare or absent in animals. A possible route by which it may occur is establishment of a novel “magic trait,” influencing both ecological adaptation and mating preference, via hybridization. We provide, to our knowledge, the first molecular genetic evidence for this process in the tropical butterfly Heliconius heurippa. We sampled molecular markers both linked to the locus controlling red color pattern and across the genome of Heliconius heurippa and its putative parents, H. cydno and H. melpomene. We found evidence of genetic introgression from H. melpomene into the hybrid H. heurippa only at the genomic region of the forewing red-band locus. This signature of introgression corresponds to the 3′ end of a kinesin gene that also shows a pattern of expression restricted to the distal region of the forewing. As the wing color pattern in these butterflies is crucial in maintaining the isolation of this species through mate choice, this study provides molecular support for the hybrid origin of a new adaptive trait that can lead to speciation.},
+    number = {4},
+    doi = {10.1371/journal.pgen.1000930}
+}
+
+
+@article{pickrell_toward_2014,
+	title = {Toward a new history and geography of human genes informed by ancient {DNA}},
+	volume = {30},
+	issn = {0168-9525},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4163019/},
+	doi = {10.1016/j.tig.2014.07.007},
+	abstract = {Genetic information contains a record of the history of our species, and technological advances have transformed our ability to access this record. Many studies have used genome-wide data from populations today to learn about the peopling of the globe and subsequent adaptation to local conditions. Implicit in this research is the assumption that the geographic locations of people today are informative about the geographic locations of their ancestors in the distant past. However, it is now clear that long-range migration, admixture and population replacement subsequent to the initial out-of-Africa expansion have altered the genetic structure of most of the world’s human populations. In light of this, we argue that it is time to critically re-evaluate current models of the peopling of the globe, as well as the importance of natural selection in determining the geographic distribution of phenotypes. We specifically highlight the transformative potential of ancient DNA. By accessing the genetic make-up of populations living at archaeologically-known times and places, ancient DNA makes it possible to directly track migrations and responses to natural selection.},
+	number = {9},
+	urldate = {2020-04-06},
+	journal = {Trends in genetics : TIG},
+	author = {Pickrell, Joseph K. and Reich, David},
+	month = sep,
+	year = {2014},
+	pmid = {25168683},
+	pmcid = {PMC4163019},
+	pages = {377--389},
+	file = {PubMed Central Full Text PDF:/home/leonardo_iasi/Zotero/storage/SWVTW8HH/Pickrell and Reich - 2014 - Toward a new history and geography of human genes .pdf:application/pdf}
+}
+
+
+@article{rieseberg_hybridization_2007,
+	title = {Hybridization and the colonization of novel habitats by annual sunflowers},
+	volume = {129},
+	issn = {0016-6707},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2442915/},
+	doi = {10.1007/s10709-006-9011-y},
+	abstract = {Although invasive plant species often have a hybrid ancestry, unambiguous evidence that hybridization has stimulated the evolution of invasive behaviors has been difficult to come by. Here, we briefly review how hybridization might contribute to the colonization of novel habitats, range expansions, and invasiveness and then describe work on hybrid sunflowers that forges a direct link between hybridization and ecological divergence. We first discuss the invasion of Texas by the common sunflower and show that the introgression of chromosomal segments from a locally adapted species may have facilitated range expansion. We then present evidence that the colonization of sand dune, desert floor, and salt marsh habitats by three hybrid sunflower species was made possible by selection on extreme or “transgressive” phenotypes generated by hybridization. This body of work corroborates earlier claims regarding the role of hybridization in adaptive evolution and provides an experimental and conceptual framework for ongoing studies in this area.},
+	number = {2},
+	urldate = {2020-04-06},
+	journal = {Genetica},
+	author = {Rieseberg, Loren H. and Kim, Seung-Chul and Randell, Rebecca A. and Whitney, Kenneth D. and Gross, Briana L. and Lexer, Christian and Clay, Keith},
+	month = feb,
+	year = {2007},
+	pmid = {16955330},
+	pmcid = {PMC2442915},
+	pages = {149--165}
+}
+
+
+@article{kronforst_multilocus_2006,
+	title = {{MULTILOCUS} {ANALYSES} {OF} {ADMIXTURE} {AND} {INTROGRESSION} {AMONG} {HYBRIDIZING} {HELICONIUS} {BUTTERFLIES}},
+	volume = {60},
+	issn = {0014-3820, 1558-5646},
+	url = {https://bioone.org/journals/Evolution/volume-60/issue-6/06-005.1/MULTILOCUS-ANALYSES-OF-ADMIXTURE-AND-INTROGRESSION-AMONG-HYBRIDIZING-HELICONIUS-BUTTERFLIES/10.1554/06-005.1.full},
+	doi = {10.1554/06-005.1},
+	abstract = {Introgressive hybridization is an important evolutionary process and new analytical methods provide substantial power to detect and quantify it. In this study we use variation in the frequency of 657 AFLP fragments and DNA sequence variation from 15 genes to measure the extent of admixture and the direction of interspecific gene flow among three Heliconius butterfly species that diverged recently as a result of natural selection for Müllerian mimicry, and which continue to hybridize. Bayesian clustering based on AFLP genotypes correctly delineated the three species and identified four H. cydno, three H. pachinus, and three H. melpomene individuals that were of mixed ancestry. Gene genealogies revealed substantial shared DNA sequence variation among all three species and coalescent simulations based on the Isolation with Migration (IM) model pointed to interspecific gene flow as its cause. The IM simulations further indicated that interspecific gene flow was significantly asymmetrical, with greater gene flow from H. pachinus into H. cydno (2Nm = 4.326) than the reverse (2Nm = 0.502), and unidirectional gene flow from H. cydno and H. pachinus into H. melpomene (2Nm = 0.294 and 0.252, respectively). These asymmetries are in the directions expected based on the genetics of wing patterning and the probability that hybrids of various phenotypes will survive and reproduce in different mimetic environments. This empirical demonstration of extensive interspecific gene flow is in contrast to a previous study which found little evidence of gene flow between another pair of hybridizing Heliconius species, H. himera and H. erato, and it highlights the critical role of natural selection in maintaining species diversity. Furthermore, these results lend support to the hypotheses that phenotypic diversification in the genus Heliconius has been fueled by introgressive hybridization and that reinforcement has driven the evolution of assortative mate preferences.},
+	number = {6},
+	urldate = {2020-04-06},
+	journal = {Evolution},
+	author = {Kronforst, Marcus R. and Young, Laura G. and Blume, Lauren M. and Gilbert, Lawrence E.},
+	month = jun,
+	year = {2006},
+	pages = {1254--1268},
+	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/4HULXAQ7/06-005.1.html:text/html}
+}
+
+
+@article{kolbe_multiple_2007,
+	title = {Multiple {Sources}, {Admixture}, and {Genetic} {Variation} in {Introduced} {Anolis} {Lizard} {Populations}},
+	volume = {21},
+	issn = {1523-1739},
+	url = {https://conbio.onlinelibrary.wiley.com/doi/abs/10.1111/j.1523-1739.2007.00826.x},
+	doi = {10.1111/j.1523-1739.2007.00826.x},
+	abstract = {Abstract: Invasive species are classically thought to suffer from reduced within-population genetic variation compared to their native-range sources due to founder effects and population bottlenecks during introduction. Reduction in genetic variation in introduced species may limit population growth, increase the risk of extinction, and constrain adaptation, hindering the successful establishment and spread of an alien species. Results of recent empirical studies, however, show higher than expected genetic variation, rapid evolution, and multiple native-range sources in introduced populations, which challenge the classical scenario of invasive-species genetics. With mitochondrial DNA (mtDNA) sequence data, we examined the molecular genetics of 10 replicate introductions of 8 species of Anolis lizards. Eighty percent of introductions to Florida and the Dominican Republic were from multiple native-range source populations. MtDNA haplotypes restricted to different geographically distinct populations in the native range of a species commonly occurred as intrapopulation polymorphisms in introduced populations. Two-thirds of introduced populations had two or more sources, and admixture elevated genetic variation in half of the introduced populations above levels typical of native-range populations. The mean pairwise sequence divergence among haplotypes sampled within introduced populations was nearly twice that within native-range populations (2.6\% vs. 1.4\%). The dynamics of introductions from multiple sources and admixture explained the observed genetic contrasts between native and introduced Anolis populations better than the classical scenario for most introduced populations. Elevated genetic variation through admixture occurred regardless of the mode or circumstances of an introduction. Little insight into the number of sources or amount of genetic variation in introduced populations was gained by knowing the number of physical introductions, the size of a species' non-native range, or whether it was a deliberate or accidental introduction. We hypothesize that elevated genetic variation through admixture of multiple sources is more common in biological invasions than previously thought. We propose that introductions follow a sequential, two-step process involving a reduction in genetic variation due to founder effects and population bottlenecks followed by an increase in genetic variation if admixture of individuals from multiple native-range sources occurs.},
+	language = {en},
+	number = {6},
+	urldate = {2020-04-06},
+	journal = {Conservation Biology},
+	author = {Kolbe, Jason J. and Glor, Richard E. and Schettino, Lourdes Rodríguez and Lara, Ada Chamizo and Larson, Allan and Losos, Jonathan B.},
+	year = {2007},
+	keywords = {ADNmt, anoles, Anolis, biological invasion, distribución nativa, especies invasoras, historia de invasión, invasión biológica, invasion history, invasive species, mtDNA, native-range source populations, poblaciones fuente},
+	pages = {1612--1625},
+	file = {Snapshot:/home/leonardo_iasi/Zotero/storage/6WB6ZBXH/j.1523-1739.2007.00826.html:text/html}
+}
